Communication with sensoray 826

--- a/microprobe_cmake/CMakeLists.txt
+++ b/microprobe_cmake/CMakeLists.txt
@@ -3,13 +3,10 @@
 #
 cmake_minimum_required (VERSION 3.8)
 
-set(LIBRARY_OUTPUT_PATH "${CMAKE_BINARY_DIR}")
-set(EXECUTABLE_OUTPUT_PATH "${CMAKE_BINARY_DIR}")
-
 project ("microprobe_cmake")
 # Ajoutez une source à l'exécutable de ce projet.
 add_executable (microprobe_cmake "main.cpp" "main.h"
-                "826api.h")
+                "sensoray/826api.h")
 
 if (CMAKE_VERSION VERSION_GREATER 3.12)
   set_property(TARGET microprobe_cmake PROPERTY CXX_STANDARD 20)
@@ -24,10 +21,6 @@ target_link_libraries(microprobe_cmake PUBLIC test_class)
 # Import external library
 
 add_library(sensoray826 SHARED IMPORTED)
-# set_property(TARGET sensoray826 PROPERTY
-#             IMPORTED_LOCATION "C:/Users/Alexandre/Documents/Cours/PDM/code/microprobe_cmake/libs/s826.dll")
-# set_property(TARGET sensoray826 PROPERTY
-#             IMPORTED_IMPLIB "C:/Users/Alexandre/Documents/Cours/PDM/code/microprobe_cmake/libs/s826.lib")
 set_property(TARGET sensoray826 PROPERTY
              IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/libs/s826.dll")
 set_property(TARGET sensoray826 PROPERTY
