Dedicated sensoray class

--- a/microprobe_cmake/CMakeLists.txt
+++ b/microprobe_cmake/CMakeLists.txt
@@ -6,7 +6,7 @@ cmake_minimum_required (VERSION 3.8)
 project ("microprobe_cmake")
 # Ajoutez une source à l'exécutable de ce projet.
 add_executable (microprobe_cmake "main.cpp" "main.h"
-                "sensoray/826api.h")
+                "sensoray/826api.h" "sensoray/826.h" "sensoray/826.cpp")
 
 if (CMAKE_VERSION VERSION_GREATER 3.12)
   set_property(TARGET microprobe_cmake PROPERTY CXX_STANDARD 20)
@@ -14,7 +14,7 @@ endif()
 
 # TODO: Ajoutez des tests et installez des cibles si nécessaire.
 
-add_library(test_class "test_class.cpp" "test_class.h")
+add_library(test_class "test_class.cpp" "test_class.h" "sensoray/826.h" "sensoray/826.cpp")
 target_link_libraries(microprobe_cmake PUBLIC test_class)
 
 
